# pharmacy-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  LICENSE  PRESCRIPTION_INTEGRATION.md  README.md  README.zh-TW.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
examples/langgraph_prescription/: __init__.py  demo.py  nodes.py  state.py  workflow.py
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
src/pharmacy_mcp/: __init__.py  __main__.py  config.py
src/pharmacy_mcp/application/: __init__.py
src/pharmacy_mcp/application/services/: __init__.py  dosage.py  drug_info.py  drug_search.py  interaction.py  prescription.py  taiwan_drug.py
src/pharmacy_mcp/data/: formulary.json  renal_adjustments.json
src/pharmacy_mcp/domain/entities/: __init__.py  drug.py  interaction.py  order.py
src/pharmacy_mcp/domain/value_objects/: __init__.py  dosage.py  order_result.py  severity.py
src/pharmacy_mcp/infrastructure/api/: __init__.py  fda.py  his_mock.py  nhi.py  rxnorm.py  tfda.py
src/pharmacy_mcp/infrastructure/cache/: __init__.py  disk_cache.py
src/pharmacy_mcp/infrastructure/knowledge/: __init__.py  formulary.py  renal_dosing.py
src/pharmacy_mcp/presentation/: __init__.py  server.py
tests/: conftest.py  test_domain.py  test_prescription.py  test_server.py  test_services.py  test_taiwan_api.py  test_value_objects.py
